---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 70
  l: "struct TestStruct {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 71
  l: "    instance_var: String,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 72
  l: "}\n"
  m: "^  "
- n: 111
  l: "enum TestEnum {\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 112
  l: "    VariantOne,\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 113
  l: "    VariantTwo(String),\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 114
  l: "    VariantThree { a: String, b: u64 },\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 115
  l: "}\n"
  m: "^  "
- n: 268
  l: "pub struct PubStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 269
  l: "pub(crate) struct PubCrateStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 270
  l: "pub(self) struct PubSelfStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 271
  l: "pub(super) struct PubSuperStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 273
  l: "pub enum PubEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^  "
- n: 274
  l: "pub(crate) enum PubCrateEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 275
  l: "pub(self) enum PubSelfEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 276
  l: "pub(super) enum PubSuperEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 279
  l: "union MyUnion {\n"
  m: ^^^^^^^^^^^^^^^^^
- n: 280
  l: "    f1: u32,\n"
  m: ^^^^^^^^^^^^^^
- n: 281
  l: "    f2: f32,\n"
  m: ^^^^^^^^^^^^^^
- n: 282
  l: "}\n"
  m: "^  "
